=== 1.1.1

* Bug Fixes
  * Fixed Hoe plugin to match RDoc::TagsTask arguments.
  * Require rdoc/generator/tags first for RDoc::TagsTask.

=== 1.1 / 2010-12-29

* Minor enhancements
  * Added RDoc::TagsTask which generates a TAGS file
  * Added +:rdoc_tags+ plugin for Hoe
* Bug fix
  * Multiple tags are now generated for definitions across more than one file.
    Bug #1 by postmodern.

=== 1.0 / 2010-12-23

* 1 major enhancement
  * Birthday!
