@@ -14,7 +14,7 @@ Hoe.plugins.delete :rubyforge
 Hoe.spec 'rdoc-tags' do
   developer 'Eric Hodel', 'drbrain@segment7.net'
 
-  extra_deps << ['rdoc', '~> 3.3'] # don't forget to update rdoc/discover.rb
+  extra_deps << ['rdoc', '~> 3.4'] # don't forget to update rdoc/discover.rb
   extra_dev_deps << ['isolate', '~> 3']
 
   self.isolate_dir = 'tmp/isolate'
