@@ -1,5 +1,5 @@
 begin
-  gem 'rdoc', '~> 3.3'
+  gem 'rdoc', '~> 3.4'
   require 'rdoc/generator'
   require 'rdoc/generator/tags'
 rescue Gem::LoadError => e
